# MCSM-Discord-Bot

./: .env.sample  .gitignore  LICENSE  README.md  __init__.py  bot.py  journal.md  pyproject.toml  requirements.txt  scripts.py
docs/: README.md
src/: .env.sample  __init__.py  daemon.py  instance.py  scripts.py  shared.py  user.py  utils.py
