[tool.poetry]
name = "mcsm-discord-bot"
version = "0.1.0"
description = ""
authors = ["JianyueLab <support@jianyuelab.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
discord-py = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
